# log-archive-tool

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
log_archive/: __main__.py
tests/: test_basic.py
